// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage Should display the component correctly with the custom img url  1`] = `
<img
  alt="Product"
  className="productImg undefined"
  src="https://hola.jpg"
/>
`;

exports[`ProductImage Should display the component with a imagen with url 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;
